--- a/springcore/pom.xml
+++ b/springcore/pom.xml
@@ -6,7 +6,7 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.bharath.spring</groupId>
-	<artifactId>springcore</artifactId>
+	<artifactId>SetterInjectionValueAsTag</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 
 	<name>springcore</name>
